--- a/content/payments/billpay/api-integration/bill-payment-options.mdx
+++ b/content/payments/billpay/api-integration/bill-payment-options.mdx
@@ -9,7 +9,7 @@ visible_in_sidebar: true
 
 Some billers (eg: Loan repayments) offer multiple payment amounts for a single bill.
 
-📖 **For basic payment integration → [Paying Bills Integration Guide](./paying_bills.mdx)**
+📖 **For basic payment integration → <a href="/payments/billpay/api-integration/paying_bills" target="_blank">Paying Bills Integration Guide</a>**
 
 ## Overview
 
@@ -74,21 +74,6 @@ Check for the `paymentOptions` field in your bill fetch response:
 - Show option names with their corresponding amounts
 - Allow custom amount input within option constraints
 - Validate amounts against `minAmount`, `maxAmount`, and `amountMultiple`
-
-**Example UI Flow:**
-```
-┌─────────────────────────────────┐
-│ Choose Payment Amount:          │
-│                                 │
-│ ○ Minimum Due - ₹500.00         │
-│ ○ Full Payment - ₹2,000.00      │
-│ ● Advance Payment - ₹3,000.00   │
-│                                 │
-│ Custom Amount: [₹3,000.00    ]  │
-│ (₹3,000 - ₹10,000, multiples    │
-│  of ₹500)                       │
-└─────────────────────────────────┘
-```
 
 ### Step 3: Build Payment Request
 
@@ -273,9 +258,9 @@ ELSE:
 ## Reference Links
 
 📖 **Related Guides:**
-- [Paying Bills Integration Guide](./paying_bills.mdx) — Master guide with Flow 1 implementation
-- [Multi-Bill Processing Guide](./multi-bill-processing.mdx) — Multiple bills handling (optional)
-- [API Reference](./api-reference.mdx) — Complete endpoint specifications
-- [Webhooks Integration](./webhooks.mdx) — Real-time payment status updates
+- <a href="/payments/billpay/api-integration/paying_bills" target="_blank">Paying Bills Integration Guide</a> — Master guide with Flow 1 implementation
+- <a href="/payments/billpay/api-integration/multi-bill-processing" target="_blank">Multi-Bill Processing Guide</a> — Multiple bills handling (optional)
+- <a href="/payments/billpay/api-integration/api-reference" target="_blank">API Reference</a> — Complete endpoint specifications
+- <a href="/payments/billpay/api-integration/webhooks" target="_blank">Webhooks Integration</a> — Real-time payment status updates
 
 <WasPageHelpful />
