--- a/content/payments/billpay/api-integration/multi-bill-processing.mdx
+++ b/content/payments/billpay/api-integration/multi-bill-processing.mdx
@@ -7,9 +7,9 @@ visible_in_sidebar: true
 
 # Multi-Bill Processing Integration Guide
 
-**This extends [Flow 1 (Bill Fetch → Payment)](./paying_bills.mdx#flow-1-bill-fetch--payment-most-common) from the master guide.** Only needed when billers return multiple bills in a single fetch (< 1% of billers).
+**This extends <a href="/payments/billpay/api-integration/paying_bills#flow-1-bill-fetch--payment-most-common" target="_blank">Flow 1 (Bill Fetch → Payment)</a> from the master guide.** Only needed when billers return multiple bills in a single fetch (< 1% of billers).
 
-📖 **Start here first → [Paying Bills Integration Guide](./paying_bills.mdx)**
+📖 **Start here first → <a href="/payments/billpay/api-integration/paying_bills" target="_blank">Paying Bills Integration Guide</a>**
 
 ## When You Need This Guide
 
@@ -123,7 +123,7 @@ function renderBillSelection(fetchResponse) {
 **Multi-Bill + Payment Options:**
 Individual bills in LIST responses can also have `paymentOptions`. Handle bill selection first, then payment options for selected bills.
 
-📖 **Payment options implementation → [Bill Payment Options Guide](./bill-payment-options.mdx)**
+📖 **Payment options implementation → <a href="/payments/billpay/api-integration/bill-payment-options" target="_blank">Bill Payment Options Guide</a>**
 
 **Transaction responses include individual bill breakdown for detailed reconciliation and audit trails.**
 
@@ -137,9 +137,9 @@ Individual bills in LIST responses can also have `paymentOptions`. Handle bill s
 ## Reference Links
 
 📖 **Related Guides:**
-- [Paying Bills Integration Guide](./paying_bills.mdx) — Master guide with Flow 1 implementation
-- [Bill Payment Options Guide](./bill-payment-options.mdx) — Handle payment options within bills
-- [API Reference](./api-reference.mdx) — Complete endpoint specifications
-- [Webhooks Integration](./webhooks.mdx) — Real-time payment status updates
+- <a href="/payments/billpay/api-integration/paying_bills" target="_blank">Paying Bills Integration Guide</a> — Master guide with Flow 1 implementation
+- <a href="/payments/billpay/api-integration/bill-payment-options" target="_blank">Bill Payment Options Guide</a> — Handle payment options within bills
+- <a href="/payments/billpay/api-integration/api-reference" target="_blank">API Reference</a> — Complete endpoint specifications
+- <a href="/payments/billpay/api-integration/webhooks" target="_blank">Webhooks Integration</a> — Real-time payment status updates
 
 <WasPageHelpful />
