--- a/content/payments/billpay/api-integration/paying_bills.mdx
+++ b/content/payments/billpay/api-integration/paying_bills.mdx
@@ -16,7 +16,7 @@ visible_in_sidebar: true
     <li><strong>Bill fetch response</strong>: v2 returns <code>bills[]</code> array, v1 returns single <code>bill</code> object</li>
     <li><strong>Endpoints</strong>: Use <code>/api/v1/</code> or <code>/api/v2/</code> as needed</li>
   </ul>
-  For complete migration details → <a href="./v2-migration.mdx">V2 Migration Guide</a>
+  For complete migration details → <a href="/payments/billpay/api-integration/v2-migration">V2 Migration Guide</a>
 </Callout>
 
 ## Understanding Bill Payment Models
@@ -96,7 +96,7 @@ Content-Type: application/json
 ### Remitter Details
 
 - All bill payment requests require you to include <code>remitter.name</code> and <code>paymentDetails.accountInfo</code> for traceability.
-- You can find NPCI-compatible formats and examples in the [Remitter Details Guide](./remittance_flows_guide.mdx)
+- You can find NPCI-compatible formats and examples in the <a href="/payments/billpay/api-integration/remittance_flows_guide" target="_blank">Remitter Details Guide</a>
 
 ### Customer Convenience Fee (CCF)
 
@@ -140,8 +140,8 @@ Retry:    Fetch → refId: XYZ789 → Payment (paymentRefId: PAY456) → Success
 Use when customers want to see their current amount due before paying. Majority of the billers on the network use this model.
 
 **Implementation Steps:**
-1. Fetch Bill Details → [Initiate bill fetch](/payments/billpay/api-integration/api-reference#/category~Fetch/operation~FetchRequest) and monitor status ([poll response](/payments/billpay/api-integration/api-reference#/category~Fetch/operation~FetchResponse) or [accept webhook](./webhooks.mdx#bill-fetch-webhook))
-2. Initiate Payment → [Initiate bill payment](/payments/billpay/api-integration/api-reference#/category~Payment/operation~PaymentRequest) and monitor status ([poll response](/payments/billpay/api-integration/api-reference#/category~Payment/operation~PaymentResponse) or [accept webhook](./webhooks.mdx#bill-payment-webhook))
+1. Fetch Bill Details → <a href="/payments/billpay/api-integration/api-reference#/category~Fetch/operation~FetchRequest" target="_blank">Initiate bill fetch</a> and monitor status (<a href="/payments/billpay/api-integration/api-reference#/category~Fetch/operation~FetchResponse" target="_blank">poll response</a> or <a href="/payments/billpay/api-integration/webhooks#bill-fetch-webhook" target="_blank">accept webhook</a>)
+2. Initiate Payment → <a href="/payments/billpay/api-integration/api-reference#/category~Payment/operation~PaymentRequest" target="_blank">Initiate bill payment</a> and monitor status (<a href="/payments/billpay/api-integration/api-reference#/category~Payment/operation~PaymentResponse" target="_blank">poll response</a> or <a href="/payments/billpay/api-integration/webhooks#bill-payment-webhook" target="_blank">accept webhook</a>)
 
 ### Step 1: Fetch Bill Details
 
@@ -271,7 +271,7 @@ Call `/api/v{1|2}/bbps/bills/payment/request` with:
 }
 `}</CodeBlockWithCopy>
 
-📖 **Complete payment options implementation → [Bill Payment Options Guide](./bill-payment-options.mdx)**
+📖 **Complete payment options implementation → <a href="/payments/billpay/api-integration/bill-payment-options" target="_blank">Bill Payment Options Guide</a>**
 
 ### Paying for multiple bills (Optional)
 
@@ -303,7 +303,7 @@ Call `/api/v{1|2}/bbps/bills/payment/request` with:
 }
 `}</CodeBlockWithCopy>
 
-📖 **Complete multi-bill implementation → [Multi-Bill Processing Guide](./multi-bill-processing.mdx)**
+📖 **Complete multi-bill implementation → <a href="/payments/billpay/api-integration/multi-bill-processing" target="_blank">Multi-Bill Processing Guide</a>**
 
 
 ## Flow 2: Bill Validation → Payment
@@ -318,8 +318,8 @@ Use when you need to validate account existence before payment. Common with serv
 - Uses same bill fetch endpoint but for validation purpose
 
 **Implementation Steps:**
-1. Validate Account → [Initiate bill validation](/payments/billpay/api-integration/api-reference#/category~Fetch/operation~FetchRequest) and monitor status ([poll response](/payments/billpay/api-integration/api-reference#/category~Fetch/operation~FetchResponse) or [accept webhook](./webhooks.mdx#bill-fetch-webhook))
-2. Initiate Payment → [Initiate bill payment](/payments/billpay/api-integration/api-reference#/category~Payment/operation~PaymentRequest) and monitor status ([poll response](/payments/billpay/api-integration/api-reference#/category~Payment/operation~PaymentResponse) or [accept webhook](./webhooks.mdx#bill-payment-webhook))
+1. Validate Account → <a href="/payments/billpay/api-integration/api-reference#/category~Fetch/operation~FetchRequest" target="_blank">Initiate bill validation</a> and monitor status (<a href="/payments/billpay/api-integration/api-reference#/category~Fetch/operation~FetchResponse" target="_blank">poll response</a> or <a href="/payments/billpay/api-integration/webhooks#bill-fetch-webhook" target="_blank">accept webhook</a>)
+2. Initiate Payment → <a href="/payments/billpay/api-integration/api-reference#/category~Payment/operation~PaymentRequest" target="_blank">Initiate bill payment</a> and monitor status (<a href="/payments/billpay/api-integration/api-reference#/category~Payment/operation~PaymentResponse" target="_blank">poll response</a> or <a href="/payments/billpay/api-integration/webhooks#bill-payment-webhook" target="_blank">accept webhook</a>)
 
 ### Basic Validation → Payment
 
@@ -419,7 +419,7 @@ Call `/api/v{1|2}/bbps/bills/payment/request` with:
 }
 `}</CodeBlockWithCopy>
 
-📖 **Complete plan selection implementation guide → [Paying for plans](./plan-mdm-integration.mdx)**
+📖 **Complete plan selection implementation guide → <a href="/payments/billpay/api-integration/plan-mdm-integration" target="_blank">Paying for plans</a>**
 
 ## Flow 3: Direct Payment
 
@@ -486,17 +486,17 @@ After initiating a payment across any flow, you'll receive responses that requir
 - For billers with `supportsPendingStatus: true`, poll up to 48 hours
 - Always store `transactionId` from successful payments for disputes/reconciliation
 
-📖 **Complete response format → [Objects Reference](./objects.mdx#payment-response)**
-📖 **Webhook alternative → [Bill Payment Webhook](./webhooks.mdx#bill-payment-webhook)**
+📖 **Complete response format → <a href="/payments/billpay/api-integration/objects#payment-response" target="_blank">Objects Reference</a>**
+📖 **Webhook alternative → <a href="/payments/billpay/api-integration/webhooks#bill-payment-webhook" target="_blank">Bill Payment Webhook</a>**
 
 ## Reference Links
 
 📖 **Essential References:**
-- [Complete API Documentation](./api-reference.mdx) — Full endpoint specifications
-- [Bill Payment Options Guide](./bill-payment-options.mdx) — Handle multiple payment amounts (essential)
-- [Plan MDM Integration](./plan-mdm-integration.mdx) — Plan-based biller patterns
-- [Multi-Bill Processing Guide](./multi-bill-processing.mdx) — Multiple bills handling (optional)
-- [Remitter Details Guide](./remittance_flows_guide.mdx) — Payment format specifications  
-- [Webhooks Integration](./webhooks.mdx) — Real-time status updates
+- <a href="/payments/billpay/api-integration/api-reference" target="_blank">Complete API Documentation</a> — Full endpoint specifications
+- <a href="/payments/billpay/api-integration/bill-payment-options" target="_blank">Bill Payment Options Guide</a> — Handle multiple payment amounts (essential)
+- <a href="/payments/billpay/api-integration/plan-mdm-integration" target="_blank">Plan MDM Integration</a> — Plan-based biller patterns
+- <a href="/payments/billpay/api-integration/multi-bill-processing" target="_blank">Multi-Bill Processing Guide</a> — Multiple bills handling (optional)
+- <a href="/payments/billpay/api-integration/remittance_flows_guide" target="_blank">Remitter Details Guide</a> — Payment format specifications  
+- <a href="/payments/billpay/api-integration/webhooks" target="_blank">Webhooks Integration</a> — Real-time status updates
 
 <WasPageHelpful />
