--- a/content/payments/billpay/api-integration/plan-mdm-integration.mdx
+++ b/content/payments/billpay/api-integration/plan-mdm-integration.mdx
@@ -10,7 +10,7 @@ visible_in_sidebar: true
 
 Some services require your users to choose a plan before payment - like mobile recharge plans, DTH packages, or broadband subscriptions. This guide shows you how to handle these plan selection flows in your app.
 
-📖 **This extends [Flow 2: Bill Validation → Payment](./paying_bills.mdx#flow-2-bill-validation--payment) from the master guide**
+📖 **This extends <a href="/payments/billpay/api-integration/paying_bills#flow-2-bill-validation--payment" target="_blank">Flow 2: Bill Validation → Payment</a> from the master guide**
 
 **What this means for your users:**
 - Instead of paying a bill amount, they choose from available plans
@@ -88,7 +88,7 @@ Your users will encounter one of two plan selection patterns, depending on the s
 
 ### How to Detect Which Pattern to Implement
 
-Check the biller metadata from [List Billers API](./api-reference.mdx) to determine the pattern:
+Check the biller metadata from <a href="/payments/billpay/api-integration/api-reference" target="_blank">List Billers API</a> to determine the pattern:
 
 **Pattern 1 Detection:**
 ```json
@@ -112,7 +112,7 @@ Check the biller metadata from [List Billers API](./api-reference.mdx) to determ
   "responseType": "SINGLE"
 }
 ```
-→ Use standard [Bill Validation flow](./paying_bills.mdx#flow-2-bill-validation--payment)
+→ Use standard <a href="/payments/billpay/api-integration/paying_bills#flow-2-bill-validation--payment" target="_blank">Bill Validation flow</a>
 
 
 <br/>
