--- a/content/payments/billpay/api-integration/remittance_flows_guide.mdx
+++ b/content/payments/billpay/api-integration/remittance_flows_guide.mdx
@@ -1,6 +1,6 @@
 ---
-sidebar_title: Passing Remitter Details in Bill Payments
-page_title: Passing Remitter Details in Bill Payments
+sidebar_title: Remitter Details
+page_title: Remitter Details
 order: 6
 visible_in_sidebar: true
 ---
@@ -12,7 +12,7 @@ visible_in_sidebar: true
 
 This guide is a concise format reference for remitter details and NPCI-compatible account information used in bill payments. Use it alongside the master integration guide.
 
-📖 **For complete payment integration context and examples → [Paying Bills Integration Guide](./paying_bills.mdx)**
+📖 **For complete payment integration context and examples → <a href="/payments/billpay/api-integration/paying_bills" target="_blank">Paying Bills Integration Guide</a>**
 
 NPCI supports rich remittance information for all bill payments. 
 
@@ -41,7 +41,7 @@ NPCI supports rich remittance information for all bill payments.
 
 - Fetch/Validation requests: <Code>remitter</Code> is optional.
 - Payment requests (Flow 1–3): <Code>remitter.name</Code> and <Code>paymentDetails.accountInfo</Code> are required.
-- For CCF handling and funds movement, see [Paying Bills → Cross‑Flow Rules & Patterns](./paying_bills.mdx#common-patterns).
+- For CCF handling and funds movement, see <a href="/payments/billpay/api-integration/paying_bills#common-patterns" target="_blank">Paying Bills → Cross‑Flow Rules & Patterns</a>.
 
 ### Sample Payment Request (minimal)
 
