--- a/content/payments/billpay/api-integration/objects.mdx
+++ b/content/payments/billpay/api-integration/objects.mdx
@@ -68,7 +68,7 @@ CustomerV2 object holds the customer mobile number and the customer bill paramet
 | `customerParams[].value`   | `string`                           | Value of the customer parameter. Value is validate according to the regex found in the biller details.                          |
 | `name`                     | `string` (Optional)                | Customer's name as registered with the biller. Only present in UPMS registration callbacks if provided by the biller's system.  |
 
-Note: `customerParams` is a new field introduced in the V2 API in place of `billParameters`.
+Note: `customerParams` is a new field introduced in the V2 API in place of `billParameters` (Refer <a href="/payments/billpay/api-integration/v2-migration#bill-fetch-request" target="_blank">V2 migration guide</a>).
 
 ## Biller
 
