fix bill payment options

--- a/content/payments/billpay/api-integration/bill-payment-options.mdx
+++ b/content/payments/billpay/api-integration/bill-payment-options.mdx
@@ -190,7 +190,10 @@ ELSE:
     }]
   }
 }
+`}</CodeBlockWithCopy>
 
+
+<CodeBlockWithCopy language="json">{`
 // Payment Request (Partial Prepayment)
 {
   "refId": "LOAN_FETCH_123",
@@ -224,7 +227,10 @@ ELSE:
     "message": "Amount 75000 is below minimum 100000 for option 'Partial Prepayment'"
   }
 }
+`}</CodeBlockWithCopy>
 
+
+<CodeBlockWithCopy language="json">{`
 // Invalid multiple error  
 {
   "success": false,
