add integration for time based payment options

--- a/content/payments/billpay/api-integration/paying_bills.mdx
+++ b/content/payments/billpay/api-integration/paying_bills.mdx
@@ -241,8 +241,10 @@ Some billers (eg: Loan repayments) offer multiple payment amounts for a single b
 `}</CodeBlockWithCopy>
 
 **When your bill fetch response includes `paymentOptions`:**
-- Present payment choices to users (e.g., "1 month EMI", "Partial repayment", "Foreclosure")
-- Include selected option in payment request using `selectedPaymentOptions` field
+- Present these options alongside the base `bill.amount`.
+- Include exactly one selected option in the payment request when paying a non‑base option; `paymentDetails.amount` must match the selected option’s `amount`.
+- Omit `selectedPaymentOptions` when paying the base `bill.amount`.
+- For optional time‑based defaults (Early/Late) and complete selection rules, see the specialized guide below.
 
 **Payment Request with Selected Option:**
 
