style/content tweaks

--- a/content/payments/billpay/api-integration/bill-payment-options.mdx
+++ b/content/payments/billpay/api-integration/bill-payment-options.mdx
@@ -1,6 +1,6 @@
 ---
-sidebar_title: Bill Payment Options
-page_title: Bill Payment Options Integration Guide
+sidebar_title: Paying for alternative options
+page_title: Paying for alternative options
 order: 7
 visible_in_sidebar: true
 ---
@@ -164,7 +164,7 @@ All date comparisons are in IST.
 
 📖 **Related Guides:**
 - <a href="/payments/billpay/api-integration/paying_bills" target="_blank">Paying Bills Integration Guide</a> — Master guide with Flow 1 implementation
-- <a href="/payments/billpay/api-integration/multi-bill-processing" target="_blank">Multi-Bill Processing Guide</a> — Multiple bills handling (optional)
+- <a href="/payments/billpay/api-integration/multi-bill-processing" target="_blank">Paying for multiple bills</a> — Multiple bills handling 
 - <a href="/payments/billpay/api-integration/api-reference" target="_blank">API Reference</a> — Complete endpoint specifications
 - <a href="/payments/billpay/api-integration/webhooks" target="_blank">Webhooks Integration</a> — Real-time payment status updates
 
