--- a/content/payments/billpay/api-integration/paying_bills.mdx
+++ b/content/payments/billpay/api-integration/paying_bills.mdx
@@ -273,7 +273,7 @@ Call `/api/v{1|2}/bbps/bills/payment/request` with:
 }
 `}</CodeBlockWithCopy>
 
-📖 **Complete payment options implementation → <a href="/payments/billpay/api-integration/bill-payment-options" target="_blank">Bill Payment Options Guide</a>**
+📖 **Complete payment options implementation → <a href="/payments/billpay/api-integration/bill-payment-options" target="_blank">Paying for alternative options</a>**
 
 ### Paying for multiple bills (Optional)
 
@@ -495,9 +495,9 @@ After initiating a payment across any flow, you'll receive responses that requir
 
 📖 **Essential References:**
 - <a href="/payments/billpay/api-integration/api-reference" target="_blank">Complete API Documentation</a> — Full endpoint specifications
-- <a href="/payments/billpay/api-integration/bill-payment-options" target="_blank">Bill Payment Options Guide</a> — Handle multiple payment amounts (essential)
+- <a href="/payments/billpay/api-integration/bill-payment-options" target="_blank">Paying for alternative options</a> — Handle multiple payment amounts 
 - <a href="/payments/billpay/api-integration/plan-mdm-integration" target="_blank">Plan MDM Integration</a> — Plan-based biller patterns
-- <a href="/payments/billpay/api-integration/multi-bill-processing" target="_blank">Multi-Bill Processing Guide</a> — Multiple bills handling (optional)
+- <a href="/payments/billpay/api-integration/multi-bill-processing" target="_blank">Multi-Bill Processing Guide</a> — Multiple bills handling 
 - <a href="/payments/billpay/api-integration/remittance_flows_guide" target="_blank">Remitter Details Guide</a> — Payment format specifications  
 - <a href="/payments/billpay/api-integration/webhooks" target="_blank">Webhooks Integration</a> — Real-time status updates
 
