--- a/content/payments/billpay/api-integration/remittance_flows_guide.mdx
+++ b/content/payments/billpay/api-integration/remittance_flows_guide.mdx
@@ -1,6 +1,6 @@
 ---
-sidebar_title: Remitter Details
-page_title: Remitter Details
+sidebar_title: Passing Remitter Details
+page_title: Passing Remitter Details
 order: 6
 visible_in_sidebar: true
 ---
@@ -13,8 +13,6 @@ visible_in_sidebar: true
 This guide is a concise format reference for remitter details and NPCI-compatible account information used in bill payments. Use it alongside the master integration guide.
 
 📖 **For complete payment integration context and examples → <a href="/payments/billpay/api-integration/paying_bills" target="_blank">Paying Bills Integration Guide</a>**
-
-NPCI supports rich remittance information for all bill payments. 
 
 
 ## Fields Reference
@@ -39,11 +37,10 @@ NPCI supports rich remittance information for all bill payments.
 
 ## Usage Across Flows
 
-- Fetch/Validation requests: <Code>remitter</Code> is optional.
-- Payment requests (Flow 1–3): <Code>remitter.name</Code> and <Code>paymentDetails.accountInfo</Code> are required.
-- For CCF handling and funds movement, see <a href="/payments/billpay/api-integration/paying_bills#common-patterns" target="_blank">Paying Bills → Cross‑Flow Rules & Patterns</a>.
+- Fetch/Validation requests: <code>remitter</code> is optional.
+- Payment requests (Flow 1–3): <code>remitter.name</code> and <code>paymentDetails.accountInfo</code> are required.
 
-### Sample Payment Request (minimal)
+### Sample Payment Request
 
 <CodeBlockWithCopy language="json">{`
 {
